--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.45); 
+    background: rgba(0, 0, 0, 2.95); 
 }
 
 .navbar .nav-link.active {
@@ -92,14 +92,28 @@ body {
   text-align: center;
 }
 
-.carousel-caption{
-  text-shadow: 2px 2px #707070;
+/* .carousel-caption{
+  text-shadow: 2px 2px #000000;
+} */
+
+.carousel-caption p{
+  font-size: 25px;
+  
 }
 
-@media (min-width: 400px) and (max-width: 1024px) {
+.blur{
+  backdrop-filter: blur(5px);
+}
+
+
+@media (min-width: 300px) and (max-width: 1024px) {
   .carousel-item img {
-    height: 600px;    /* промени на каквото искаш */
+    height: 550px;
     object-fit: cover;
   }
 
+  .carousel-caption p{
+    color: #ffffff;
+    font-size: 13px;
+  }
 }
