--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -113,6 +113,19 @@ body {
     font-size: medium;
 }
 
+.dropdown-menu{
+    background-color: #383838;
+}
+
+.dropdown-item{
+    color: #ffffff;
+}
+
+.dropdown-item:hover{
+    background-color:#1C1C1C;
+    color: #ffffff;
+}
+
 @media (min-width: 300px) and (max-width: 1024px) {
 
 }
