--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,19 @@ body {
   backdrop-filter: blur(5px);
 }
 
+.dropdown-menu{
+    background-color: #383838;
+}
+
+.dropdown-item{
+    color: #ffffff;
+}
+
+.dropdown-item:hover{
+    background-color:#1C1C1C;
+    color: #ffffff;
+}
+
 
 @media (min-width: 300px) and (max-width: 1024px) {
   .carousel-item img {
